--- a/template/index.html
+++ b/template/index.html
@@ -111,7 +111,7 @@
 					<p class="my-4" data-aos="fade-up" data-aos-delay="300" data-bs-toggle="modal" data-bs-target="#exampleModal"><a href="#" class="btn btn-primary">Buy Now</a></p>
 <br>
 					<div data-aos="fade-up">
-						<a href="https://www.youtube.com/watch?v=5n-e6lOhVq0" class="play-button align-items-center d-flex glightbox3" >
+						<a href="https://youtu.be/PBZNoQX6xeo" class="play-button align-items-center d-flex glightbox3" >
 							<span class="icon-button me-3">
 								<span class="icon-play"></span>
 							</span>
@@ -165,10 +165,63 @@
 		</div>		
 	</div>
 
-	<div class="site-footer">
+
+	<div class="section">
 		<div class="container">
 
 			<div class="row">
+				<div class="col-12"data-aos="fade-up" data-aos-delay="0">
+					
+					<h2 class="heading mb-5">Other Course</h2>
+				</div>
+			</div>
+			<div class="row align-items-stretch">
+				<div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+					<div class="media-entry">
+						<a href="#">
+							<img src="{% static 'initmacey.jpg' %}" alt="Image" class="img-fluid">
+						</a>
+						<div class="bg-white m-body">
+							<!-- <span class="date">May 14, 2020</span> -->
+							<h3><a href="#">Intimacy In Marriage</a></h3>
+							<p>Original Price:₦16,000</p>
+							<p>Promo Price:₦10,000</p>
+							
+							<a href="#" class="more d-flex align-items-center float-start" data-bs-toggle="modal" data-bs-target="#intimacy">
+								<span class="label">By Now</span>
+								<span class="arrow"><span class="icon-keyboard_arrow_right"></span></span>
+							</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+					<div class="media-entry">
+						<a href="#">
+							<img src="{% static 'stand.jpg' %}" alt="Image" class="img-fluid">
+						</a>
+						<div class="bg-white m-body">
+							<!-- <span class="date">May 14, 2020</span> -->
+							<h3><a href="#">Sexual Healing Book</a></h3>
+							<p>Original Price:₦16,000</p>
+							<p>Promo Price:₦10,000</p>
+
+							<a href="#" class="more d-flex align-items-center float-start" data-bs-toggle="modal" data-bs-target="#healing_book">
+								<span class="label">By Now</span>
+								<span class="arrow"><span class="icon-keyboard_arrow_right"></span></span>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>	
+		</div>		
+	</div>
+
+
+	<div class="site-footer">
+		<div class="container">
+
+			<!-- <div class="row">
 				<div class="col-lg-4">
 					<div class="widget">
 						<h3>more about<span class="text-primary">.</span> </h3>
@@ -181,7 +234,7 @@
 							 It points out the role of temperaments in building intimacy, and also throws more light on sex and love-making.
 							 The pages of this book are filled with practical ways on how to cultivate and maintain intimacy in a marriage relationship.
 						</p>
-					</div> <!-- /.widget -->
+					</div> 
 					<div class="widget">
 						<h3>Connect</h3>
 						<ul class="list-unstyled social">
@@ -192,8 +245,8 @@
 							<li><a href="#"><span class="icon-pinterest"></span></a></li>
 							<li><a href="#"><span class="icon-dribbble"></span></a></li>
 						</ul>
-					</div> <!-- /.widget -->
-				</div> <!-- /.col-lg-3 -->
+					</div>
+				</div> 
 
 
 				<div class="col-lg-3">
@@ -205,10 +258,10 @@
 							<li><a href="tel://11234567890">+1(123)-456-7890</a></li>
 							<li><a href="mailto:info@mydomain.com">info@mydomain.com</a></li>
 						</ul>
-					</div> <!-- /.widget -->
-				</div> <!-- /.col-lg-3 -->
+					</div>
+				</div> 
 
-			</div> <!-- /.row -->
+			</div> -->
 
 			<div class="row mt-5">
 				<br>
@@ -222,7 +275,9 @@
 					</p>
 				</div>
 			</div> <!-- /.container -->
-		</div> <!-- /.site-footer -->
+		</div>
+		
+		<!-- /.site-footer -->
 
 		<!-- Preloader -->
 		<div id="overlayer"></div>
@@ -237,12 +292,100 @@
 			<div class="modal-dialog">
 			  <div class="modal-content">
 				<div class="modal-header">
-				  <h1 class="modal-title fs-5" id="exampleModalLabel">Payment Info </h1>
+				  <h1 class="modal-title fs-5" id="exampleModalLabel">Payment Info(How to make love to your Wife) </h1>
 				  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<form action="{% url 'indexView' %}" method="post">
 					{% csrf_token %}
 				<div class="modal-body">
+					<div class="mb-3">
+						<label for="exampleFormControlInput1" class="form-label">First address</label>
+						<input type="text" class="form-control"
+						name="first_name"
+						id="exampleFormControlInput1" placeholder="matthew">
+					</div>
+					<input type="number" name="form_number" value="1" style="display: none;" >
+					  <div class="mb-3">
+						<label for="exampleFormControlInput1" class="form-label">Last Name</label>
+						<input type="text"
+						name="last_name"
+						class="form-control" id="exampleFormControlInput1" placeholder="dude">
+					  </div>
+
+					  <div class="mb-3">
+						<label for="exampleFormControlInput1" class="form-label">Email address</label>
+						<input type="email"
+						name="email"
+						class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+					  </div>
+					  
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+						<button type="submit" class="btn btn-primary">Save changes</button>
+					</div>
+				</form>
+			  </div>
+			</div>
+		  </div>
+
+
+
+		
+		  <div class="modal fade" id="intimacy" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+			  <div class="modal-content">
+				<div class="modal-header">
+				  <h1 class="modal-title fs-5" id="exampleModalLabel">Payment Info (Sexual Healing Book)</h1>
+				  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<form action="{% url 'indexView'  %}" method="post">
+					{% csrf_token %}
+				<div class="modal-body">
+					<input type="number" name="form_number" value="2" style="display: none;" >
+
+					<div class="mb-3">
+						<label for="exampleFormControlInput1" class="form-label">First address</label>
+						<input type="text" class="form-control"
+						name="first_name"
+						 id="exampleFormControlInput1" placeholder="matthew">
+					  </div>
+					  <div class="mb-3">
+						<label for="exampleFormControlInput1" class="form-label">Last Name</label>
+						<input type="text"
+						name="last_name"
+						class="form-control" id="exampleFormControlInput1" placeholder="dude">
+					  </div>
+
+					  <div class="mb-3">
+						<label for="exampleFormControlInput1" class="form-label">Email address</label>
+						<input type="email"
+						name="email"
+						class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+					  </div>
+					  
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+						<button type="submit" class="btn btn-primary">Save changes</button>
+					</div>
+				</form>
+			  </div>
+			</div>
+		  </div>
+		  
+
+		  <div class="modal fade" id="healing_book" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+			  <div class="modal-content">
+				<div class="modal-header">
+				  <h1 class="modal-title fs-5" id="exampleModalLabel">Payment Info (Intimacy In Marriage)</h1>
+				  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<form action="{% url 'indexView' %}" method="post">
+					{% csrf_token %}
+				<div class="modal-body">
+					<input type="number" name="form_number" value="3" style="display: none;" >
 
 					<div class="mb-3">
 						<label for="exampleFormControlInput1" class="form-label">First address</label>
