corrected some grammar error

--- a/template/index.html
+++ b/template/index.html
@@ -106,7 +106,8 @@
 
 					<h1 class="heading" data-aos="fade-up">How to make love to your Wife</h1>
 					<p class="mb-5" data-aos="fade-up">
-						To every Marriage that has lost its spiciness and sweetness. TO every couple that wants to enjoy love and intimacy at it peak. i dedicate this Course to you.
+						To every Marriage that has lost its spiciness and sweetness. 
+						To every couple that wants to enjoy love and intimacy at it peak. I dedicate this Course to you.
 					</p>
 					<p class="my-4" data-aos="fade-up" data-aos-delay="300" data-bs-toggle="modal" data-bs-target="#exampleModal"><a href="#" class="btn btn-primary">Buy Now</a></p>
 <br>
@@ -156,7 +157,7 @@
 							Peace Elechi is a teacher, singer and writer. She is also a Sex and Relationship Coach who is passionate about bliss and happiness in marriage. She has authored several relationship books, including: Sexual Healing, Ctrl+Help My Marriage series, Perfect Combo, amongst others. Peace is married and resides in Lagos, Nigeria with her lovely family.
 						</p> -->
 
-						<p class="my-4" data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-primary">Buy Now</a></p>
+						<!-- <p class="my-4" data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-primary">Buy Now</a></p> -->
 					</div>
 				</div>
 				
@@ -172,7 +173,7 @@
 			<div class="row">
 				<div class="col-12"data-aos="fade-up" data-aos-delay="0">
 					
-					<h2 class="heading mb-5">Other Course</h2>
+					<h2 class="heading mb-5">Books by peace</h2>
 				</div>
 			</div>
 			<div class="row align-items-stretch">
@@ -187,7 +188,7 @@
 							<p>Original Price:₦3,000</p>
 							
 							<a href="#" class="more d-flex align-items-center float-start" data-bs-toggle="modal" data-bs-target="#intimacy">
-								<span class="label">By Now</span>
+								<span class="label">Buy Now</span>
 								<span class="arrow"><span class="icon-keyboard_arrow_right"></span></span>
 							</a>
 						</div>
@@ -205,7 +206,7 @@
 							<p>Original Price:₦3,000</p>
 
 							<a href="#" class="more d-flex align-items-center float-start" data-bs-toggle="modal" data-bs-target="#healing_book">
-								<span class="label">By Now</span>
+								<span class="label">Buy Now</span>
 								<span class="arrow"><span class="icon-keyboard_arrow_right"></span></span>
 							</a>
 						</div>
