--- a/template/index.html
+++ b/template/index.html
@@ -104,10 +104,10 @@
 			<div class="row align-items-center justify-content-start">
 				<div class="col-lg-5">
 
-					<h1 class="heading" data-aos="fade-up">How to make love to your Wife</h1>
+					<h1 class="heading" data-aos="fade-up">How to Make Love to My Wife.</h1>
 					<p class="mb-5" data-aos="fade-up">
-						To every Marriage that has lost its spiciness and sweetness. 
-						To every couple that wants to enjoy love and intimacy at it peak. I dedicate this Course to you.
+						To every marriage that has lost its spiciness and sweetness,
+					 to every couple that wants to enjoy love and intimacy at its peak, I dedicate this course to you.
 					</p>
 					<p class="my-4" data-aos="fade-up" data-aos-delay="300" data-bs-toggle="modal" data-bs-target="#exampleModal"><a href="#" class="btn btn-primary">Buy Now</a></p>
 <br>
