--- a/template/index.html
+++ b/template/index.html
@@ -180,11 +180,11 @@
 				<div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
 					<div class="media-entry">
 						<a href="#">
-							<img src="{% static 'initmacey.jpg' %}" alt="Image" class="img-fluid">
+							<img src="{% static 'b.jpeg' %}" alt="Image" class="img-fluid">
 						</a>
 						<div class="bg-white m-body">
 							<!-- <span class="date">May 14, 2020</span> -->
-							<h3><a href="#">Intimacy In Marriage</a></h3>
+							<h3><a href="#">Building Intimacy In Marriage</a></h3>
 							<p>Original Price:₦3,000</p>
 							
 							<a href="#" class="more d-flex align-items-center float-start" data-bs-toggle="modal" data-bs-target="#intimacy">
@@ -198,11 +198,11 @@
 				<div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
 					<div class="media-entry">
 						<a href="#">
-							<img src="{% static 'stand.jpg' %}" alt="Image" class="img-fluid">
+							<img src="{% static 's.jpeg' %}" alt="Image" class="img-fluid">
 						</a>
 						<div class="bg-white m-body">
 							<!-- <span class="date">May 14, 2020</span> -->
-							<h3><a href="#">Sexual Healing Book</a></h3>
+							<h3><a href="#">Sexual Healing</a></h3>
 							<p>Original Price:₦3,000</p>
 
 							<a href="#" class="more d-flex align-items-center float-start" data-bs-toggle="modal" data-bs-target="#healing_book">
